--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,6 +13,7 @@ spring.datasource.hikari.maximum-pool-size=10
 spring.datasource.hikari.idle-timeout=300000
 spring.datasource.hikari.max-lifetime=1200000
 spring.datasource.hikari.auto-commit=true
+server.port=${PORT:8080}
 
 
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
