--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,8 @@
 plugins {
-	id 'java'
-	/*id 'war'*/
-	id 'org.springframework.boot' version '3.5.5'
-	id 'io.spring.dependency-management' version '1.1.7'
+  id 'java'
+  //id 'war'
+  id 'org.springframework.boot' version '3.5.5'
+  id 'io.spring.dependency-management' version '1.1.7'
 }
 
 group = 'com.setec'
@@ -10,37 +10,37 @@ version = '0.0.1-SNAPSHOT'
 description = 'Demo project for Spring Boot'
 
 java {
-	toolchain {
-		/*languageVersion = JavaLanguageVersion.of(21)*/
-		languageVersion = JavaLanguageVersion.of(JavaVersion.current().majorVersion.toInteger())
-	}
+  toolchain {
+    languageVersion = JavaLanguageVersion.of(21)
+  }
 }
 
 configurations {
-	compileOnly {
-		extendsFrom annotationProcessor
-	}
+  compileOnly {
+    extendsFrom annotationProcessor
+  }
 }
 
 repositories {
-	mavenCentral()
+  mavenCentral()
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
-	implementation 'org.springframework.boot:spring-boot-starter-web'
-	compileOnly 'org.projectlombok:lombok'
-	developmentOnly 'org.springframework.boot:spring-boot-devtools'
-	runtimeOnly 'com.mysql:mysql-connector-j'
-	annotationProcessor 'org.projectlombok:lombok'
-	/*providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'*/
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
-	// https://mvnrepository.com/artifact/com.github.pengrad/java-telegram-bot-api
-	implementation 'com.github.pengrad:java-telegram-bot-api:9.2.0'
+  implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+  implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+  implementation 'org.springframework.boot:spring-boot-starter-web'
+  compileOnly 'org.projectlombok:lombok'
+  developmentOnly 'org.springframework.boot:spring-boot-devtools'
+  runtimeOnly 'com.mysql:mysql-connector-j'
+  annotationProcessor 'org.projectlombok:lombok'
+  //providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
+  testImplementation 'org.springframework.boot:spring-boot-starter-test'
+  testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+  implementation("com.github.pengrad:java-telegram-bot-api:9.2.0")
+  implementation 'org.postgresql:postgresql:42.7.3'
+  // https://mvnrepository.com/artifact/com.github.pengrad/java-telegram-bot-api
 }
 
 tasks.named('test') {
-	useJUnitPlatform()
+  useJUnitPlatform()
 }
