--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,21 @@
 spring.application.name=coffee-shop-telegram-bot
 
-token=8340799135:AAETMGzVhcXR9KZkUQw1WdW9EZA1Stc9egU
-chat_id=935495104
+#token=8340799135:AAETMGzVhcXR9KZkUQw1WdW9EZA1Stc9egU
+#chat_id=935495104
 
-spring.datasource.url=jdbc:mysql://localhost:3309/javasu6?createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true&useSSL=false
-spring.datasource.username=root
-spring.datasource.password=1234
+token=${token}
+chat_id=${chat_id}
+
+#spring.datasource.url=jdbc:mysql://127.0.0.1:3309/javasu6?createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true&useSSL=false
+#spring.datasource.url=jdbc:mysql://localhost:3309/javasu6?createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true&useSSL=false
+#spring.datasource.username=root
+#spring.datasource.password=1234
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.datasource.url=${DATABASE_URL}
+spring.datasource.username=${DATABASE_USERNAME}
+spring.datasource.password=${DATABASE_PASSWORD}
+spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.datasource.hikari.connection-timeout=20000
 spring.datasource.hikari.minimum-idle=5
@@ -15,8 +25,7 @@ spring.datasource.hikari.max-lifetime=1200000
 spring.datasource.hikari.auto-commit=true
 server.port=${PORT:8080}
 
-
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.properties.hibernate.id.new_generator_mappings=false
 spring.jpa.properties.hibernate.format_sql=true 
 
