--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,9 +12,9 @@ chat_id=${chat_id}
 #spring.datasource.password=1234
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-spring.datasource.url=${DATABASE_URL}
-spring.datasource.username=${DATABASE_USERNAME}
-spring.datasource.password=${DATABASE_PASSWORD}
+spring.datasource.url=jdbc:postgresql://dpg-d3p6auodl3ps739q6mag-a:5432/coffee_shop_telegram_bot
+spring.datasource.username=root
+spring.datasource.password=325aGnlfRtTO5KSjD3qkBiwqdaVkCVYz
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.datasource.hikari.connection-timeout=20000
