--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,7 +25,8 @@ spring.datasource.hikari.max-lifetime=1200000
 spring.datasource.hikari.auto-commit=true
 #server.port=${PORT:8080}
 
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.properties.hibernate.id.new_generator_mappings=false
 spring.jpa.properties.hibernate.format_sql=true 
 
